# CArsenal

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build.yaml
docs/: arch-cn.md  arch.md  release-report.md
include/: include.md
include/CArsenal/: CArsenal.h
program/: program.md  program_list.md
program/calculator_qt/docs/: architecture.md  implementation_plans.md  module_tasks.md
program/editor_tiny/: CMakeLists.txt  editor_tiny.md
reference/: book.md  reference.md
reference/c/: c.md
reference/cpp/: cpp.md
script/: script.md  setup.sh
specs/001-cmdline-parser/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-cmdline-parser/checklists/: requirements.md
specs/001-cmdline-parser/contracts/: parse_error.hpp  parse_result.hpp  parser.hpp  validator.hpp
src/: CArsenal.cpp  src.md
src/program/: program.cpp
test/benchmark/: benchmark.md
test/benchmark/carsenal/: CArsenal.cpp
test/benchmark/carsenal/program/: program.cpp
test/benchmark/third/: trid.cpp
test/example/: example.md
test/example/carsenal/: CArsenal.cpp
test/example/carsenal/program/: program.cpp
test/example/third/: trid.cpp
test/integration/: integration.md
test/integration/carsenal/: CArsenal.cpp
test/integration/carsenal/program/: program.cpp
test/integration/third/: trid.cpp
third/: third.md
